--- a/lorainne/templates/home.html
+++ b/lorainne/templates/home.html
@@ -1,31 +1,102 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
-<div class="col-md-6 offset-md-3">
 
-    {% if user.is_authenticated %}
+{% if user.is_authenticated %}
 
-    <h1>Hello World</h1>
 
-    {% else %}
 
-<h1>Login</h1>
-<br/>
-<form method="POST" action="{% url 'home' %}">
+<table class="table table-striped table-hover table-bordered">
+    <thead class="table-dark">
+        <th>ID</th>
+        <th>NAME</th>
+        <th>EMAIL</th>
+        <th>PHONE</th>
+        <th>ADDRESS</th>
+        <th>CITY</th>
+        <th>STATE</th>
+        <th>ZIPCODE</th>
+        <th>CREATED AT</th>
+        <th>UPDATE</th>
+        <th>DELETE</th>
+
+    </tr>
+    </thead>
+<tbody>
+    {% if records %}
+        {% for record in records %}
+            <tr>
+                <td>{{ record.id }}</td>
+                <td>{{ record.first_name }} {{record.last_name}}</td>
+                <td>{{ record.email }}</td>
+                <td>{{ record.phone }}</td>
+                <td>{{ record.address }}</td>
+                <td>{{ record.city }}</td>
+                <td>{{ record.state }}</td>
+                <td>{{ record.zipcode }}</td>
+                <td>{{ record.created_at }}</td>
+                <td>
+                    <a href="{% url 'update_record' record.id %}"><button class="btn btn-primary">UPDATE</button></a>
+
+                </td>
+                <td>
+                         <!-- Button trigger modal -->
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    DELETE
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <a href="{% url 'delete_record' record.id %}"><button class="btn btn-danger">DELETE</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+                </td>
+                 
+            </tr>
+        
+         {% endfor %} 
+
+     {% endif %} 
+</tbody>
+</table>        
+
+{% else %}
+
+<div class="card" style="width: 30rem; height: 20rem; align-items: center; padding: 1rem;margin: 12% auto; float: none;" >
+<label for=""><h1>LOGIN</h1></label> <br>
+<br>
+<form action="{% url 'home' %}" method="POST">
     {% csrf_token %}
-    <form>
-        <div class="mb-3">
-          <input type="text" class="form-control" name="username", placeholder="Username" required>
+    <div class="mb3">
+    <input class="form-control" type="text" placeholder="username" name="username" required>
+    </div> <br>
+    <div class="mb3">
+    <input class="form-control" type="password" placeholder="password" name="password" required>
+    </div> <br>
+    <div class="mb3">
+   
+            <button  class="btn btn-dark" type="submit">Login</button>
         </div>
-        <div class="mb-3">
-          <input type="password" class="form-control" name="password", placeholder="Password" required>
-        </div>
-        <br/>
-        <button type="submit" class="btn btn-secondary">Login</button>
-      </form>
+    </div>
 </form>
-
 </div>
 
-{% endif %}
+
+{% endif %} 
+</div>
 {% endblock %}
