--- a/lorainne/templates/navbar.html
+++ b/lorainne/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Torres</a>
+      <a class="navbar-brand" href="{% url 'home' %}">IPAT2B Torres</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,9 +8,15 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-o">
             {% if user.is_authenticated %}
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'add_record' %}">Add New Record</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
-
+          
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'register' %}">Register</a>
@@ -18,9 +24,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Login</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
-          </li>
+
         </ul>
       </div>
     </div>
